<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeritageVancouver</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_search">Search</string>
    <string name="action_map">Map</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
	<string name="activity_new_message">Location Found</string>
	<string name="search_hint"></string>
	<string name="distanceBar">Distance Away</string>
	
	<string name="imageView"></string>
	
	<string name="west_hastings">West Hastings Walking Tour</string>
	<string name="japantown">Japantown Walking Tour</string>
	<string name="chinatown">Chinatown Walking Tour</string>
	<string name="carrall_street">Carrall Street Walking Tour</string>
	<string name="strathcona">Strathcona Markets Walking Tour</string>
	<string name="molehill">Mole Hill Walking Tour</string>
	
	<string name="walking_tours">Walking Tours</string>
	<string name="search_nearby">Search Nearby</string>
	<string name="building_list">Building List</string>
	<string name="view_photos">View Photos</string>
	
	<!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    
    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>
    
    <string-array name="area_array">
        <item>All</item>
        <item>Arbutus Ridge</item>
        <item>Downtown</item>
        <item>Downtown Eastside</item>
        <item>Dunbar-Southlands</item>
        <item>Fairview</item>
        <item>Grandview-Woodland</item>
        <item>Hastings-Sunrise</item>
        <item>Kensington-Cedar Cottage</item>
        <item>Kerrisdale</item>
        <item>Killarney</item>
        <item>Kitsilano</item>
        <item>Marpole</item>
        <item>Mount Pleasant</item>
        <item>Oakridge</item>
        <item>Renfrew-Collingwood</item>
        <item>Riley Park</item>
        <item>Shaughnessy</item>
        <item>South Cambie</item>
        <item>Strathcona</item>
        <item>Sunset</item>
        <item>Victoria-Fraserview</item>
        <item>West End</item>
        <item>West Point Grey</item>
    </string-array>
    
    <string-array name="category_array">
        <item>All</item>
        <item>Commercial</item>
        <item>Community</item>
        <item>Educational</item>
        <item>Government</item>
        <item>Services</item>
        <item>Industrial</item>
        <item>Recreational</item>
        <item>Religious</item>
        <item>Residential</item>
        <item>Scenic</item>
    </string-array>
    
	<drawable name="black">#000000</drawable>
	<drawable name="grey">#778899</drawable>
	<drawable name="white">#ffffff</drawable>
	<drawable name="green">#347C2C</drawable>
	
	<color name="default_screen_bg">#20324a</color>
    <color name="rounded_container_bg">#80000000</color>
    <color name="rounded_container_border">#3b3f44</color>
    <color name="light_gray_header_color">#646663</color>
	
</resources>
